fix(raj): improve types
- Dispatch now requires message.
- IProgram view() now supports return TView type, defaults to void.
- Add development mode CREATE_REACT_TRACE_DISPATCH console.log.
- Add View type for more general usage.

fix(counter): does increment/decrement
- Removed inline jsx lambda's into helper component.

add(index.tsx): example counter, counterNest, couinterNest2

add(raj-compose): mapEffect

add(raj-react):
- Add  development mode REACT_APP_TRACE_RAJ_REACT_RENDER_STATE console.log of state in render().
- Tightened types using raj View.
- Add ReactView for use by raj programs aiming at React using raj-react.

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,13 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+    <div id="root2"></div>
+    <div id="root3"></div>
+    <div id="root4"></div>
+    <div id="root5"></div>
+    <div id="root6"></div>
+    <div id="root7"></div>
+    <div id="root8"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
