--- a/public/index.html
+++ b/public/index.html
@@ -25,14 +25,18 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div id="root"></div>
-    <div id="root2"></div>
-    <div id="root3"></div>
-    <div id="root4"></div>
-    <div id="root5"></div>
-    <div id="root6"></div>
-    <div id="root7"></div>
-    <div id="root8"></div>
+    <br />
+    <div><strong>Beep Example</strong></div>
+    <div id="beep-example"></div>
+    <br />
+    <div><strong>Counter Example</strong></div>
+    <div id="counter-example"></div>
+    <br />
+    <div><strong>Counter Nest</strong></div>
+    <div id="counter-nest"></div>
+    <br />
+    <div><strong>Counter Nest 2</strong></div>
+    <div id="counter-nest2"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
