add(counterNest2Nest): another nest example
- With these there are 3 layesr counterNest2Nest -> counterNest2 -> counter.

add(raj-compose): dispatchEffect refactor code to use

add(counter2Nest): show index of counter

--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,8 @@
     <br />
     <div><strong>Counter Nest 2</strong></div>
     <div id="counter-nest2"></div>
+    <div><strong>Counter Nest 2 Nest</strong></div>
+    <div id="counter-nest2nest"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
