--- a/public/index.html
+++ b/public/index.html
@@ -33,12 +33,12 @@
     <div id="counter-example"></div>
     <br />
     <div><strong>Counter Nest</strong></div>
-    <div id="counter-nest"></div>
+    <div id="nest"></div>
     <br />
     <div><strong>Counter Nest 2</strong></div>
-    <div id="counter-nest2"></div>
+    <div id="nest2"></div>
     <div><strong>Counter Nest 2 Nest</strong></div>
-    <div id="counter-nest2nest"></div>
+    <div id="nest2nest"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
