wip(raj-example)
- No promises, no async load to simplify things.
- Change of program is not working yet it appears.

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,8 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+    <div><strong>Spa Example 1</strong></div>
+    <div id="spa-example"></div>
     <br />
     <div><strong>Beep Example</strong></div>
     <div id="beep-example"></div>
@@ -37,6 +39,7 @@
     <br />
     <div><strong>Counter Nest 2</strong></div>
     <div id="nest2"></div>
+    <br />
     <div><strong>Counter Nest 2 Nest</strong></div>
     <div id="nest2nest"></div>
     <!--
