--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <style>
+    #spa-example .nav-menu a { margin-right : 10px }
+    </style>
     <title>React App</title>
   </head>
   <body>
